<resources>
    <string name="app_name">Banco Digital</string>


    <!-- Generic  -->
    <string name="text_name_empty">Digite seu nome</string>
    <string name="text_email_empty">Digite seu e-mail</string>
    <string name="text_phone_valid">Digite um telefone válido</string>
    <string name="text_password_empty">Digite sua senha</string>
    <string name="text_hint_email">E-mail</string>


    <!-- BottomSheet -->
    <string name="text_title_bottom_sheet">Atenção</string>
    <string name="text_button_bottom_sheet">Entendi</string>

    <!-- LoginFragment-->
    <string name="text_hint_password_login_fragment">Senha</string>
    <string name="text_btn_login_fragment">Entrar</string>
    <string name="text_btn_register_login_fragment">Criar Conta</string>
    <string name="text_btn_recover_login_fragment">Recuperar Conta</string>

    <!-- RecoverFragment  -->
    <string name="text_message_send_email_recover_sucess">E-mail enviado com sucesso.</string>
    <string name="text_hint_email_recover_fragment">Digite seu e-mail.</string>
    <string name="text_btn_email_send_recover_fragment">Enviar e-mail.</string>
    <string name="text_title_toolbar_recover_fragment">Recuperar Conta</string>
    <string name="text_message_recover_fragment">Digite seu e-mail que te enviaremos um link para você alterar sua senha.</string>

    <!-- RegisterFragment  -->
    <string name="text_label_name_register_fragment">Nome</string>
    <string name="text_label_email_register_fragment">Email</string>
    <string name="text_label_phone_register_fragment">Telefone</string>
    <string name="text_label_password_register_fragment">Senha</string>
    <string name="text_hint_name_register_fragment">Digite seu nome.</string>
    <string name="text_hint_email_register_fragment">Digite seu e-mail.</string>
    <string name="text_hint_phone_register_fragment">Digite seu telefone.</string>
    <string name="text_hint_password_register_fragment">Digite uma senha.</string>
    <string name="text_btn_send_register_fragment">Cadastrar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>

    <!-- Profile Fragment  -->
    <string name="text_label_name_profile_fragment">Nome</string>
    <string name="text_label_email_profile_fragment">Email</string>
    <string name="text_label_phone_profile_fragment">Telefone</string>
    <string name="text_hint_name_profile_fragment">Digite seu nome.</string>
    <string name="text_hint_email_profile_fragment">Digite seu e-mail.</string>
    <string name="text_hint_phone_profile_fragment">Digite seu telefone.</string>
    <string name="text_btn_send_profile_fragment">Salvar</string>
    <string name="text_title_toolbar_profile_fragment">Perfil</string>
    <string name="text_message_save_success">Perfil salvo com sucesso!</string>
    <string name="text_message_access_camera_denied_profile_fragment">Para que você capture imagens usando a câmera, precisaremos de permissão. Acesse as configurações de permissões e habilite a permissão.</string>
    <string name="text_message_access_gallery_denied_profile_fragment">Para que você carregue imagens usando a galeria, precisaremos de permissão. Acesse as configurações de permissões e habilite a permissão.</string>

    <string name="text_title_bottom_sheet_profile">Adicionar imagem de perfil</string>
    <string name="text_message_bottom_sheet_profile">Escolha uma das opções abaixo para definir uma imagem de perfil.</string>
    <string name="text_button_camera_bottom_sheet_profile">Câmera</string>
    <string name="text_button_gallery_bottom_sheet_profile">Galeria</string>

    <!--    Erros Firebase Authentication-->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_register_fragment">Insira um e-mail válido.</string>
    <string name="invalid_password_register_fragment">Senha inválida, tente novamente.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">Insira uma senha mais forte.</string>
    <string name="text_error_generic">Ocorreu um erro, tente novamente mais tarde.</string>

    <!--    Home Fragment-->
    <string name="text_formated_value">R$: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_message_empty_transaction_home_fragment">Nenhuma transação efetuada</string>

    <!--    DepositReceiptFragment-->
    <string name="text_title_toolbar_deposit_receipt_fragment">Recibo</string>
    <string name="text_title_deposit_receipt_fragment">Depósito efeturado\n com sucesso!</string>
    <string name="text_sub_deposit_receipt_fragment">Seu depósito ficará disponível em até 30 minutos</string>
    <string name="text_code_transaction_deposit_receipt_fragment">Código Transação</string>
    <string name="text_date_transaction_deposit_receipt_fragment">Data depósito</string>
    <string name="text_amount_transaction_deposit_receipt_fragment">Valor depósito</string>
    <string name="text_btn_transaction_deposit_receipt_fragment">continuar</string>

    <!--    DepositFormFragment-->
    <string name="text_title_edit_deposit_form_fragment">Informe o valor a ser depositado</string>
    <string name="text_btn_deposit_form_fragment">Confirmar</string>
    <string name="text_title_deposit_form_fragment">Depositar</string>


    <!--    RechargeReceiptFragment-->
    <string name="text_title_toolbar_recharge_receipt_fragment">Recibo</string>
    <string name="text_title_recharge_receipt_fragment">Recarga efetuada\n com sucesso!</string>
    <string name="text_sub_recharge_receipt_fragment">Seu crédito ficará disponível em alguns minutos</string>
    <string name="text_code_transaction_recharge_receipt_fragment">Código Transação</string>
    <string name="text_date_transaction_recharge_receipt_fragment">Data recarga</string>
    <string name="text_amount_transaction_recharge_receipt_fragment">Valor recarga</string>
    <string name="text_amount_phone_recharge_receipt_fragment">Número</string>
    <string name="text_btn_transaction_recharge_receipt_fragment">continuar</string>
    <string name="text_invalid_recharge_value_receipt_fragment">Por Favor, digite um valor maior ou igual a R$: 10,00</string>

    <!--    TransferConfirmFragment-->
    <string name="text_title_toolbar_confirm_transfer_confirm_fragment">Transferencia</string>
    <string name="text_message_transfer_confirm_fragment">Confirme os dados antes de concluir a transferência</string>
    <string name="text_sub_transfer_confirm_fragment">Após confirmar transferência, não\n será possível desfazê-la</string>
    <string name="text_label_user_transfer_confirm_fragment">Beneficiado:</string>
    <string name="text_label_transfer_confirm_fragment">Valor transferido</string>
    <string name="text_label_transfer_date_confirm_fragment">Data transferência</string>
    <string name="text_button_confirm_transfer_fragment">Confirmar</string>

    <!--    TransferFormFragment-->
    <string name="text_title_toolbar_confirm_transfer_form_fragment">Transferencia</string>
    <string name="text_label_amount_transfer_form_fragment">Informe o valor a ser transferido</string>
    <string name="text_button_continue_transfer_fragment">Continuar</string>
    <string name="text_message_empty_amount_transfer_fragment">Digite um valor maior que R$: 0,00</string>

    <!--    TransferReceiptFragment-->
    <string name="text_title_toolbar_confirm_transfer_receipt_fragment">Recibo</string>
    <string name="text_label_transfer_receipt_fragment">Valor transferido</string>
    <string name="text_label_transfer_date_receipt_fragment">Data transferência</string>
    <string name="text_label_user_received_transfer_confirm_fragment">Receberá a transferência:</string>
    <string name="text_label_user_sent_transfer_confirm_fragment">Enviou a transferência:</string>
    <string name="text_message_sucess_transfer_receipt_fragment">Transferência efetuada \ncom sucesso!</string>
    <string name="text_message_transfer_received_sucess_transfer_receipt_fragment">Transferência recebida \ncom sucesso!</string>
    <string name="text_sub_transfer_receipt_fragment">Transferência realizada com sucesso! A previsão de crédito na conta destino é de até 30 minutos.</string>
    <string name="text_button_confirm_transfer_receipt_fragment">Continuar</string>

    <!--    RechargeFormFragment-->
    <string name="text_title_toolbar_recharge_form_fragment">Recarga</string>
    <string name="text_title_amomunt_form_recharge_fragment">Valor da recarga</string>
    <string name="text_label_phone_number_form_recharge_fragment">Insira o número</string>
    <string name="text_hint_phone_number_recharge_form_fragment">Número</string>
    <string name="text_btn_recharge_form_fragment">Confirmar</string>
    <string name="text_edit_recharge_form_fragment">Informe o valor da recarga</string>


    <!--    ExtractFragment-->
    <string name="text_title_toolbar_exctract_fragment">Extrato</string>
    <string name="text_message_empty_transaction_extract_fragment">Nenhuma transação efetuada</string>


    <!--    TransferUserListFragment-->
    <string name="text_title_toolbar_transfer_user_list_fragment">Usuários</string>
    <string name="text_message_empty_user_transfer_user_list_fragment">Nenhum usuário encontrado</string>




</resources>